# dagster_workspace

./: .gitignore  .gitmodules  README.md  workspace.yaml
.github/: copilot-instructions.md
sports_framework/: QUICKSTART.md  README.md  pyproject.toml
sports_framework/scripts/: create_schema.sql
sports_framework/sports_framework/: __init__.py  cli.py  definitions.py
sports_framework/sports_framework/betting/: __init__.py  betting_intelligence_assets.py  closing_line_value.py  injury_impact.py  kelly_criterion.py  line_movement.py  performance_tracker.py  public_money.py
sports_framework/sports_framework/common/: __init__.py  betting_assets.py  weather_assets.py
sports_framework/sports_framework/core/: api_clients.py  base.py  config.py  models.py
sports_framework/sports_framework/ml/: __init__.py  power_ratings.py
sports_framework/sports_framework/sports/: __init__.py
sports_framework/sports_framework/sports/mlb/: __init__.py
sports_framework/sports_framework/sports/nba/: __init__.py
sports_framework/sports_framework/sports/nfl/: __init__.py  assets.py  jobs.py  nfl_etl.py
sports_framework/sports_framework/sports/nhl/: __init__.py
sports_framework/sports_framework/utils/: data_quality.py  persistence.py  rate_limiter.py
